fix: make dark mode default

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,117 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
-
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: 'Proxima Nova', sans-serif;
-                                                
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: 'Proxima Nova';
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-    font-family: 'Proxima Nova', sans-serif;
-                                                
-    background: none;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  background: #1E1E1E;
 }
 
 .nav-wrap {
@@ -125,6 +14,7 @@ a {
 }
 .connect-btn {
 border: 1px solid #E3E3E3;
+color: #E3E3E3;
 border-radius: 16.5px;
 width: 119px;
 height: 39px;
@@ -143,13 +33,15 @@ justify-content: center;
   align-items: center;
   padding: 4rem;
   font-family: 'Proxima Nova';
-  /* background: #1E1E1E; */
+ 
 }
 .container {
   width: 287px;
 /* height: 30px; */
 background: rgba(45, 44, 44, 0.3);
 border-radius: 10px;
+display: flex;
+justify-content: center;
 }
 .tab-flex {
 display: flex;
@@ -158,6 +50,7 @@ margin-left: 25.5px;
 }
 .swap-text {
   margin: 26.5px 0 36.5px 0;
+  color: #E3E3E3;
   font-family: 'Proxima Nova';
 font-style: normal;
 font-weight: 700;
@@ -257,6 +150,7 @@ margin: 0 21px 22px 22px;
   justify-content: space-between;
 }
 .estim-text {
+  color: #E3E3E3;
   font-weight: 400;
 font-size: 12px;
 line-height: 15px;
@@ -281,6 +175,7 @@ line-height: 15px;
   display: flex;
 }
 .save {
+  color: #E3E3E3;
   font-weight: 400;
 font-size: 12px;
 line-height: 15px;
@@ -304,7 +199,8 @@ line-height: 15px;
   background-color: transparent;
 }
 .input {
-  width: 30px;
+  width: 60px;
+  color: #E3E3E3;
   border: none;
   outline: none;
   background: none;
